# iterable-serialization

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.cfg
src/iterable_serialization/: __init__.py  serialization.py  str_serialization.py  string_format.py
src/iterable_serialization_tests/: test_str_serialization.py
src/iterable_serialization_tests/test_serialization_py/: test_deserialize_iterable.py  test_serialize_iterable.py
